--- a/app/html/_index.html
+++ b/app/html/_index.html
@@ -1,6 +1,307 @@
 //= partials/_header.html
- 
+<div class="about">
+    <div class="image"><img src="img/about.jpg" alt=""></div>
+    <div class="container">
+        <div class="text">
+            <h1>Профессиональная ликвидация и регистрационные действия для юридических лиц и ИП в Москве.</h1>
+            <p>Ликвидация компании – ответственное мероприятие, которое таит в себе множество рисков и потенциальных
+                проблем. </p>
+            <p>В зависимости от конкретной ситуации, важно выбрать правильную стратегию и понимать, что все варианты с
+                «альтернативной ликвидацией» очень рискованны, не смотря на «гарантии» организаторов таких услуг.</p>
+            <br>
+
+            <p><a href="#">Закрыть ООО</a></p>
+            <p><a href="#">Открыть ООО</a></p>
+            <p><a href="#">Внести изменения в ООО</a></p>
+            <p><a href="#">Налоговый и бухгалтерский консалтинг</a></p>
+            <p><a href="#">Возврат налогов для физических лиц</a></p>
+        </div>
+    </div>
+    
+</div>
+
+<div class="types">
+    <div class="container">
+        <div class="title">Если вам предлагают ликвидировать компанию одним <br>из таких способов:</div>
+        <div class="items">
+            <div class="item">
+                <div class="img"><img src="img/type4.png" alt=""></div>
+                <div class="name">ликвидировать компанию через продажу иностранцам (в офшор)</div>
+            </div>
+            <div class="item">
+                <div class="img"><img src="img/type3.png" alt=""></div>
+                <div class="name">ликвидировать ООО путем его продажи и смены директора на других лиц</div>
+            </div>
+            <div class="item">
+                <div class="img"><img src="img/type2.png" alt=""></div>
+                <div class="name">ликвидировать компанию путем слияния/поглощения</div>
+            </div>
+            <div class="item">
+                <div class="img"><img src="img/type1.png" alt=""></div>
+                <div class="name">ликвидировать ООО быстро и без налоговой проверки</div>
+            </div>
+        </div>
+
+        <div class="alter-text">
+            <p>Вам следует заранее изучить все <a href="#">риски при ликвидации ООО</a>
+                <br>или <a href="#">риски при закрытии ИП</a>, которые вы берете на себя.
+            </p>
+        </div>
+    </div>
+</div>
 
 
+
+<div class="container">
+    <div class="single-service">
+        <div class="text">
+            <p>Мы ликвидируем компании только официальным путем — через закрытие компании и удаление из реестра
+                ЕГРЮЛ. </p>
+            <p>Индивидуальный подход и разумная стратегия действий позволит нам ликвидировать вашу компанию или ИП
+                быстро и безопасно.</p>
+            <p>Тем, кто захочет провести ликвидацию самостоятельно, мы подготовили подробные пошаговые инструкции,
+                актуальные на 2020 год:</p>
+            <p><a href="#">Ликвидировать ООО самостоятельно</a></p>
+            <p><a href="#">Инструкция по самостоятельному закрытию ИП</a></p>
+        </div>
+        <div class="carts">
+            <div class="cart-service">
+                <div class="head">Ликвидировать ИП </div>
+                <div class="price rouble">от 5000</div>
+                <a href="#order" class="popup-link easybox">
+                    <svg class="icon-arrow">
+                        <use xlink:href="img/sprite.svg#arr-right"></use>
+                    </svg>
+                    Заказать
+                </a>
+                <a href="#detals" class="more easybox">подробности</a>
+            </div>
+            <div class="cart-service">
+                <div class="head">Ликвидировать ООО, АО, ОАО и др. </div>
+                <div class="price rouble">от 10000</div>
+                <a href="#order" class="popup-link easybox">
+                    <svg class="icon-arrow">
+                        <use xlink:href="img/sprite.svg#arr-right"></use>
+                    </svg>
+                    Заказать
+                </a>
+                <a href="#detals" class="more easybox">подробности</a>
+            </div>
+
+        </div>
+    </div>
+</div>
+
+
+
+<div class="green-block">
+    <div class="container">
+        <div class="text">
+            <p>Для работающих компаний и стартапов мы предлагаем широкий спектр услуг по регистрационным действиям и
+                консалтингу для бизнеса, а также оказываем услуги по бухгалтерскому сопровождению. </p>
+        </div>
+    </div>
+</div>
+
+<div class="main-container">
+    <div class="services">
+        <div class="service-item items-2">
+            <div class="title">
+                <div class="icon-counter"><img src="img/counter1.png" alt=""></div>
+                <span>Легкий старт бизнеса</span>
+            </div>
+            <div class="descr text-block">
+                <p>Практически каждый предприниматель на старте своей деятельности совершает множество ошибок: </p>
+                <ul class="danger">
+                    <li>выбирает не ту форму собственности или не оптимальный режим налогообложения</li>
+                    <li>покупает неправильный юридический адрес или забывает прописать нужный ОКВЭД</li>
+                    <li>неправильно организует бухгалтерию и сдачу отчетностей</li>
+                </ul>
+                <p>В данном разделе вы сможете самостоятельно разобраться, какую форму собственности использовать для
+                    вашего бизнеса:</p>
+                <p><a href="#">Выбор между ООО или ИП – плюсы и минусы</a></p>
+                <p>А также найти подробные пошаговые инструкции на 2020 год:</p>
+                <p><a href="#">Самостоятельная регистрация ООО</a></p>
+                <p><a href="#">Самостоятельное открытие ИП</a></p>
+            </div>
+            <div class="carts">
+                <div class="text">
+                    Тем, кто решит воспользоваться нашей помощью при регистрации, мы оказываем персональную
+                    консультацию, помогающую избежать ошибок на старте.
+                </div>
+
+                <div class="carts-items">
+                    <div class="cart-service green">
+                        <div class="head">Открыть ИП</div>
+                        <div class="price rouble">от 5000</div>
+                        <a href="#order" class="popup-link easybox">
+                            <svg class="icon-arrow">
+                                <use xlink:href="img/sprite.svg#arr-right"></use>
+                            </svg>
+                            Заказать
+                        </a>
+                    </div>
+                    <div class="cart-service green">
+                        <div class="head">открыть ООО, АО, ОАО и др. </div>
+                        <div class="price rouble">от 10000</div>
+                        <a href="#order" class="popup-link easybox">
+                            <svg class="icon-arrow">
+                                <use xlink:href="img/sprite.svg#arr-right"></use>
+                            </svg>
+                            Заказать
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+        <div class="service-item items-3">
+            <div class="title">
+                <div class="icon-counter"><img src="img/counter2.png" alt=""></div>
+                <span>Регистрационные действия для <br>бизнеса</span>
+            </div>
+
+            <div class="descr text-block">
+
+                <ul>
+                    <li>Расскажем о законных способах вывода наличных с ООО или ИП</li>
+                    <li>В зависимости от вида деятельности и оборотов компании разработаем подходящий режим
+                        налогообложения</li>
+                    <li>Окажем консультации в случае получения требований из налоговой</li>
+                    <li>Поможем наладить бухгалтерский учет и перенести его в «облако»</li>
+                    <li>Проконсультируем, как действовать при налоговых проверках и блокировках счетов</li>
+                </ul>
+
+                <p><a href="#">Инструкция по внесению изменений в ЕГРЮЛ для ООО</a></p>
+                <p><a href="#">Инструкция по изменению данных ЕГРИП</a></p>
+                <p><a href="#">Инструкция по смене налогового режима ООО и ИП</a></p>
+            </div>
+            <div class="carts">
+                <div class="carts-items">
+                    <div class="cart-service green">
+                        <div class="head">Внести изменения в ооо</div>
+                        <div class="price rouble">от 10000</div>
+                        <a href="#order" class="popup-link easybox">
+                            <svg class="icon-arrow">
+                                <use xlink:href="img/sprite.svg#arr-right"></use>
+                            </svg>
+                            Заказать
+                        </a>
+                    </div>
+                    <div class="cart-service green">
+                        <div class="head">Внести изменения в ИП</div>
+                        <div class="price rouble">от 10000</div>
+                        <a href="#order" class="popup-link easybox">
+                            <svg class="icon-arrow">
+                                <use xlink:href="img/sprite.svg#arr-right"></use>
+                            </svg>
+                            Заказать
+                        </a>
+                    </div>
+                    <div class="cart-service green">
+                        <div class="head">изменение налогового режима ООО, ИП</div>
+                        <div class="price rouble">от 10000</div>
+                        <a href="#order" class="popup-link easybox">
+                            <svg class="icon-arrow">
+                                <use xlink:href="img/sprite.svg#arr-right"></use>
+                            </svg>
+                            Заказать
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+        <div class="service-item">
+            <div class="title">
+                <div class="icon-counter"><img src="img/counter3.png" alt=""></div>
+                <span>Налоговый и бухгалтерский консалтинг для малого бизнеса</span>
+            </div>
+
+
+
+            <div class="descr text-block">
+
+                <ul>
+                    <li>Расскажем о законных способах вывода наличных с ООО или ИП</li>
+                    <li>В зависимости от вида деятельности и оборотов компании разработаем подходящий режим
+                        налогообложения</li>
+                    <li>Окажем консультации в случае получения требований из налоговой</li>
+                    <li>Поможем наладить бухгалтерский учет и перенести его в «облако»</li>
+                    <li>Проконсультируем, как действовать при налоговых проверках и блокировках счетов</li>
+                </ul>
+            </div>
+            <div class="carts">
+                <div class="carts-items">
+                    <div class="cart-service green">
+                        <div class="head">налоговый, бухгалтерский консалтинг</div>
+                        <div class="price rouble">от 10000</div>
+                        <a href="#order" class="popup-link easybox">
+                            <svg class="icon-arrow">
+                                <use xlink:href="img/sprite.svg#arr-right"></use>
+                            </svg>
+                            Заказать
+                        </a>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+
+        <div class="service-item">
+            <div class="title">
+                <div class="icon-counter"><img src="img/counter4.png" alt=""></div>
+                <span>Возврат налогов для физических лиц</span>
+            </div>
+            <div class="descr text-block">
+                <p>Многие граждане даже не догадываются, что по закону им полагаются налоговые вычеты и не пользуются
+                    этим. Мы расскажем вам о том, какие средства можно вернуть от государства в 2020 году и поможем
+                    грамотно оформить подачу документов в Федеральную налоговую службу. Поможем оформить справку 3-НДФЛ
+                    и получить выплаты по возврату НДФЛ со следующих видов расходов:</p>
+                <ul>
+                    <li>Покупка недвижимость (до 260 т.р.) и проценты по ипотеке (до 390 т.р)</li>
+                    <li>Лечение и лекарства (до 15 600 руб./год)</li>
+                    <li>Образование (до 15 600 руб./год)</li>
+                    <li>Стандартный налоговый вычет на детей</li>
+                    <li>Страхование (до 15 600 руб./год)</li>
+                </ul>
+
+            </div>
+            <div class="carts">
+                <div class="carts-items">
+                    <div class="cart-service green">
+                        <div class="head">возврат ндфл</div>
+                        <div class="price rouble">от 10000</div>
+                        <a href="#order" class="popup-link easybox">
+                            <svg class="icon-arrow">
+                                <use xlink:href="img/sprite.svg#arr-right"></use>
+                            </svg>
+                            Заказать
+                        </a>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="hidden">
+    <div class="pop_up_box" id="menu">
+        <div class="popup-logo"><img src="img/logo.png" alt=""></div>
+        <div class="main_menu">
+            //= partials/_categories.html
+        </div>
+
+        <a href="#order" class="popup-link easybox mobile_visible">
+            <svg class="icon-arrow">
+                <use xlink:href="img/sprite.svg#arr-right"></use>
+            </svg>
+            Получить консультацию
+        </a>
+    </div>
+</div>
 
 //= partials/_footer.html
